[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/psoion.gd" type="Script" id=1]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 230.507, 642.964 )

[node name="psoion" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_psoion_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
